--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,90 @@
+# 서버포트 번호
+server:
+  port: 8080
+
+# 콘솔 ANSI 색상
 spring:
-  profiles:
-    active: prod
+  output:
+    ansi:
+      enabled: always
+  servlet:
+    multipart:
+      max-file-size: 10GB
+      max-request-size: 10GB
+
+  # thymeleaf 설정
+  thymeleaf:
+    cache: false
+    prefix: classpath:templates/views/
+
+  # datasource 설정
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/derror?useSSL=false&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+    username: root
+    password: 1234
+
+  # security
+  security:
+    user:
+      name: user1     # 디폴트 security username
+      password: 1234   #  password
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: 293310204590-vd7uq0r3d93br59gihrvstc5j3k2at8l.apps.googleusercontent.com
+            client-secret: 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
+            scope:
+              - email
+              - profile
+          facebook:
+            client-id: 364525142704034
+            client-secret: a718c546b851ab002080a25e4fa5dec3
+            scope:
+              - email
+              - public_profile
+          naver:
+            client-id: Ewygcfqr5cJDHoooUWVQ
+            client-secret: 8dm6TsOD2f
+            scope:
+              - name
+              - email
+            client-name: Naver
+            authorization-grant-type: authorization_code
+            redirect-uri: http://localhost:8080/login/oauth2/code/naver
+        provider:
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
+
+
+# MyBatis 매퍼(mapper) 파일 위치 설정
+# src/main/resources 이하의 경로 지정
+mybatis:
+  mapper-locations: classpath:mapper/**/*.xml
+app:
+  # 파일 업로드 경로
+  upload:
+    path: upload
+
+  # 페이징 관련 세팅값
+  pagination:
+    write_pages: 10  # 기본 write_pages 값. 한 [페이징] 당 몇개의 페이지가 표시되나
+    page_rows: 10   # 기본 page_rows 값.  한 '페이지'에 몇개의 글을 리스트 할것인가?
+
+  # OAuth2
+  oauth2:
+    password: 1234
+    #KaKao 로그인 관련 세팅값
+    kakao:
+      client-id: 349a91de177017b0a62cae3d943d5943 #앱 키
+      redirect-uri: http://localhost:8080/oauth2/kakao/callback
+      token-uri: https://kauth.kakao.com/oauth/token
+      user-info-uri: https://kapi.kakao.com/v2/user/me
+
+
+openai:
+  key: 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
